--- a/Rotten_Potatoes/client/index.html
+++ b/Rotten_Potatoes/client/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Yanone+Kaffeesatz:wght@300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rotten Potatoes</title>
-    <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./src/assets/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
